# exim

./: .editorconfig  .exim-project-root  .gitattributes  .gitignore  .gitleaksignore  .mailmap  Makefile.in  NOTICE  README  README.md  Readme.pod  SE-README.md  SECURITY.md  TODO  configure
test/: .editorconfig  .gitignore  .perltidyrc  ABOUT  Makefile.in  README  configure  configure.ac  fakens.s  listtests  patchexim  runtest  trusted_configs
test/aux-fixed/: 0001.trusted  0002.alias1  0002.alias2  0002.aliases  0002.domains  0002.iplsearch  0002.lsearch  0002.matchip  0002.quoted  0002.readfile  0002.rec  0002.runfile  0002.starat  0003.rej.bydomain  0003.rej.lsearch  0006-aliases  0014.usernames  0015.filter.userx  0015.realnames  0016.filter.userx  0023.acl2  0033.list  0037.f-1  0037.f-3  0037.f-4  0037.f-7  0037.f-9  0037.msg  0041.aliases  0043.aliases  0047.routes  0051.domains  0051.notdomains  0053.aliases  0057.d1  0057.d2  0064.hosts  0066.nets  0066.nothosts  0067.not1  (+203 more)
test/aux-var-src/: 0001.trusted  0002.wild  0022.hosts  0037.F  0037.f-readfile  0037.f-user  0060.d1  0060.d2  0066.hostnets  0071.aliases  0074.filter  0093.f-1  0112.alias  0114.filter  0115.forward  0164.F  0173.filter  0177.filter  0184.filter  0185.filter  0246.filter  0372.F  0383.F  0383.f  0401.hosts1  0401.hosts2  0472.f  3550.dovecot.conf  3551.dovecot.conf  4110.f-7  4116.filter  4117.f-1  4117.f-2  4124.F  4127.filter  4130.filter  4135.filter  4143.filter  4144.filter  4151.F  (+4 more)
test/confs/: 0000  0001  0002  0003  0004  0005  0006  0007  0008  0009  0010  0011  0012  0013  0014  0015  0016  0017  0018  0019  0020  0021  0022  0023  0024  0025  0026  0027  0028  0029  0030  0031  0032  0033  0034  0035  0036  0037  0038  0039  (+1094 more)
test/dnszones-src/: db.dontqualify  db.example.com  db.ip4.10  db.ip4.127  db.ip4.V4NET  db.ip6.0  db.ip6.V6NET  db.kitterman.org  db.test.ex  db.test.ex._bad  qualify.test.ex
test/log/: 0005  0006  0008  0009  0010  0011  0012  0014  0015  0016  0019  0021  0022  0023  0024  0025  0026  0027  0028  0031  0032  0033  (+890 more)
(+4794 files in other folders)
